# ebook-factory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PRD.md  README.md  package.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: f859991ed5fa_initial_schema.py
apps/backend/src/app/: config.py  main.py  redis_client.py
apps/backend/src/app/api/: approvals.py  artifacts.py  chapters.py  deps.py  health.py  projects.py  workflows.py
apps/backend/src/app/db/: __init__.py  session.py
apps/backend/src/app/models/: __init__.py  approval.py  artifact.py  chapter.py  enums.py  project.py
apps/backend/src/app/schemas/: __init__.py  approval.py  artifact.py  chapter.py  project.py
apps/backend/src/app/storage/: __init__.py  client.py
apps/backend/tests/: test_chapters_api.py  test_db_session.py  test_health.py  test_models.py  test_projects_api.py  test_redis.py  test_storage.py
apps/frontend/: Dockerfile  package.json
docs/superpowers/plans/: 2026-06-15-ebook-factory.md
docs/superpowers/tasks/: fluxo-desenvolvimento.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md
infra/: .env.example  docker-compose.yml
infra/prod/: .env.example  docker-compose.yml
infra/prod/caddy/: Caddyfile
